[tool.poetry]
name = "lab06_lib"
version = "0.1.0"
description = ""
authors = ["Juan Felipe Coronel <juanfelipe.coronel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
