[tool.poetry]
name = "cs12241lab06"
version = "0.1.3"
description = ""
authors = []
readme = "README.md"
packages = [
  {include = "cs12241lab06"},
  {include = "cs12241lab06/py.typed"},
]

[tool.poetry.dependencies]
python = "^3.11"
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
